# yadig

./: .gitignore  CLAUDE.md  CODEBUDDY.md  DEVELOPER_GUIDE.md  README.md  ROADMAP.md  index.html  package.json  pnpm-lock.yaml
docs/handoff/: 2026-06-10-bili-media-workstation.md
docs/issues/: 002-bilibili-auth.md  003-single-video-audio-extraction.md  005-chapter-video-extraction.md  009-search-page-bilibili-url-detection.md
docs/prd/: PRD-bilibili-audio-extraction.md  PRD-bilibili-favorites-remote-operations.md  PRD-bilibili-favorites-v2-llm-operations.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql  002_search_history.sql  003_rss_feeds.sql  004_library_tables.sql  005_library_item_collection_metadata.sql  006_operation_plan_item_remote_fields.sql  007_llm_classifications.sql  008_operation_plan_item_metadata.sql
src-tauri/src/: config.rs  error.rs  http_client.rs  lib.rs  library.rs  llm.rs  main.rs
src-tauri/src/bili/: auth.rs  client.rs  extractor.rs  ffmpeg.rs  mod.rs  session.rs  types.rs  url.rs  wbi.rs
src-tauri/src/commands/: bilibili.rs  library.rs  mod.rs  search.rs  youtube.rs
src-tauri/src/source/: mod.rs  provider.rs  registry.rs  types.rs
src-tauri/src/source/api/: bilibili.rs  discogs.rs  jamendo.rs  lastfm.rs  mod.rs  musicbrainz.rs  youtube.rs
src-tauri/src/source/rss/: feeds.rs  mod.rs  pitchfork.rs
src-tauri/src/source/scraper/: albumoftheyear.rs  bandcamp.rs  mod.rs
src-tauri/src/youtube/: mod.rs  types.rs
(+71 files in other folders)
